1992-08-07  dickey@software.org

	* Makefile: use:common.mk

	* Makefile: use defs in common.mk

	* src/version.h: added command-history to the non-inline text commands
	(e.g., filelist ':', '/', '?', pager '/', '?', and directory
	tree '/', '?', '@', '~').

	* src/dlog.c, src/ftree.c, src/dedfind.c, src/dedtype.c, src/dedread.c:
	line-history

	* src/dlog.c:
	got the normal (line) scrolling working ok for 'dlog_string()'

	* src/history.c: allow longer history
	do better testing in 'get_history()'

	* src/dlog.c: modified so that we reset history-index if user edits the
	buffer

	* src/deddoit.c: plug in history

	* src/dlog.c:
	revised history-code in 'dlog_string()' so this should work
	for non-inline commands.

	* src/ded.h: added 'history.c'

	* src/history.c: RCS_BASE

	* src/Makefile: added 'history.c'

	* test/test2.cmd, test/test1.cmd: added history.c

1992-08-06  dickey@software.org

	* src/dedread.c: dlog_string-interface

	* src/dlog.c: revising 'dlog_string()' to add arguments for scrolling
	thru list of alternatives, and for saving keystrokes for
	"-command (replay).

	* src/ded.h, src/deddoit.c, src/ftree.c, src/dedtype.c, src/ded.c, src/dedfind.c:
	dlog_string-interface

	* src/dlog.c: modified 'pending' so that it should never overflow.
	make 'cmd_bfr' dynamically allocated (but fixed size!)

	* src/dlog.c: chopped out code now in common/logch.c

	* test/Makefile: use defs in common.mk

	* test/test4.cmd, test/test3.cmd, test/test2.cmd: rawgets/logging

	* src/dlog.c:
	merged 'read_line()' into 'dlog_string()'; make the resulting
	procedure work properly with the command-argument of 'wrawgets()'

	* test/test1.cmd: rawgets/logging

	* test/test4.cmd, test/test3.cmd: dlog-escapes

	* src/dlog.c: split out 'record_char()' function to use in new function
	'record_string()' -- to allow me to record individual chars
	in 'dlog_string()' rather than the buffer-result.
	added escape types \F, \B, \W and \? to make the log a little
	more readable.
