@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920807
+MANIFEST for ded, version t19920810
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
